workload-expr/src/main/java/com/qpg/expr/execplan/parser/ExecPlanParser.java
// Generated from /Users/dollychen/Documents/qpg_workspace/QPG_experiment/lib/QueryPathGraph-master/workload-expr/src/main/antlr4/ExecPlanParser.g4 by ANTLR 4.9.2
 package com.qpg.expr.execplan.parser; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExecPlanParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, COMMA=2, LBRACKET=3, RBRACKET=4, LBRACE=5, RBRACE=6, LPAR=7, 
		RPAR=8, OP=9, DATA_=10, TYPE_=11, RANGE_=12, EXEC_=13, QUERY_=14, UPDATE_=15, 
		FILTER_=16, INSERT_=17, INT_=18, STRING_=19, DATE_=20, FLOAT_=21, ID=22, 
		NUMERIC_LITERAL=23, STRING_LITERAL=24, SINGLE_LINE_COMMENT=25, MULTILINE_COMMENT=26, 
		WS=27;
	public static final int
		RULE_input = 0, RULE_stmt = 1, RULE_data_range_stmt = 2, RULE_data_range = 3, 
		RULE_data_type_stmt = 4, RULE_exec_query_stmt = 5, RULE_query_stmt = 6, 
		RULE_query_table = 7, RULE_attr_lists = 8, RULE_ea_attrs = 9, RULE_ia_attrs = 10, 
		RULE_oa_attrs = 11, RULE_pa_attrs = 12, RULE_exec_update_stmt = 13, RULE_update_stmt = 14, 
		RULE_type = 15, RULE_keyword = 16, RULE_any_name = 17, RULE_update_name = 18, 
		RULE_query_name = 19, RULE_table_name = 20, RULE_attr_name = 21, RULE_min_num = 22, 
		RULE_max_num = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"input", "stmt", "data_range_stmt", "data_range", "data_type_stmt", "exec_query_stmt", 
			"query_stmt", "query_table", "attr_lists", "ea_attrs", "ia_attrs", "oa_attrs", 
			"pa_attrs", "exec_update_stmt", "update_stmt", "type", "keyword", "any_name", 
			"update_name", "query_name", "table_name", "attr_name", "min_num", "max_num"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'['", "']'", "'{'", "'}'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "COMMA", "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAR", 
			"RPAR", "OP", "DATA_", "TYPE_", "RANGE_", "EXEC_", "QUERY_", "UPDATE_", 
			"FILTER_", "INSERT_", "INT_", "STRING_", "DATE_", "FLOAT_", "ID", "NUMERIC_LITERAL", 
			"STRING_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExecPlanParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExecPlanParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class InputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(ExecPlanParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterInput(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitInput(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DATA_ || _la==EXEC_) {
				{
				{
				setState(48);
				stmt();
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Data_type_stmtContext data_type_stmt() {
			return getRuleContext(Data_type_stmtContext.class,0);
		}
		public Data_range_stmtContext data_range_stmt() {
			return getRuleContext(Data_range_stmtContext.class,0);
		}
		public Exec_query_stmtContext exec_query_stmt() {
			return getRuleContext(Exec_query_stmtContext.class,0);
		}
		public Exec_update_stmtContext exec_update_stmt() {
			return getRuleContext(Exec_update_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(60);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				data_type_stmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				data_range_stmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				exec_query_stmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(59);
				exec_update_stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_range_stmtContext extends ParserRuleContext {
		public TerminalNode DATA_() { return getToken(ExecPlanParser.DATA_, 0); }
		public TerminalNode RANGE_() { return getToken(ExecPlanParser.RANGE_, 0); }
		public TerminalNode LBRACE() { return getToken(ExecPlanParser.LBRACE, 0); }
		public List<Data_rangeContext> data_range() {
			return getRuleContexts(Data_rangeContext.class);
		}
		public Data_rangeContext data_range(int i) {
			return getRuleContext(Data_rangeContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(ExecPlanParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ExecPlanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExecPlanParser.COMMA, i);
		}
		public Data_range_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_range_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterData_range_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitData_range_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitData_range_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_range_stmtContext data_range_stmt() throws RecognitionException {
		Data_range_stmtContext _localctx = new Data_range_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_data_range_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(DATA_);
			setState(63);
			match(RANGE_);
			setState(64);
			match(LBRACE);
			setState(65);
			data_range();
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(66);
				match(COMMA);
				setState(67);
				data_range();
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_rangeContext extends ParserRuleContext {
		public Attr_nameContext attr_name() {
			return getRuleContext(Attr_nameContext.class,0);
		}
		public TerminalNode COLON() { return getToken(ExecPlanParser.COLON, 0); }
		public TerminalNode LBRACKET() { return getToken(ExecPlanParser.LBRACKET, 0); }
		public Min_numContext min_num() {
			return getRuleContext(Min_numContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(ExecPlanParser.COMMA, 0); }
		public Max_numContext max_num() {
			return getRuleContext(Max_numContext.class,0);
		}
		public TerminalNode RBRACKET() { return getToken(ExecPlanParser.RBRACKET, 0); }
		public Data_rangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_range; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterData_range(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitData_range(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitData_range(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_rangeContext data_range() throws RecognitionException {
		Data_rangeContext _localctx = new Data_rangeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_data_range);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			attr_name();
			setState(76);
			match(COLON);
			setState(77);
			match(LBRACKET);
			setState(78);
			min_num();
			setState(79);
			match(COMMA);
			setState(80);
			max_num();
			setState(81);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Data_type_stmtContext extends ParserRuleContext {
		public TerminalNode DATA_() { return getToken(ExecPlanParser.DATA_, 0); }
		public TerminalNode TYPE_() { return getToken(ExecPlanParser.TYPE_, 0); }
		public TerminalNode LBRACE() { return getToken(ExecPlanParser.LBRACE, 0); }
		public List<Attr_nameContext> attr_name() {
			return getRuleContexts(Attr_nameContext.class);
		}
		public Attr_nameContext attr_name(int i) {
			return getRuleContext(Attr_nameContext.class,i);
		}
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(ExecPlanParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ExecPlanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExecPlanParser.COMMA, i);
		}
		public Data_type_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_data_type_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterData_type_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitData_type_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitData_type_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Data_type_stmtContext data_type_stmt() throws RecognitionException {
		Data_type_stmtContext _localctx = new Data_type_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_data_type_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(DATA_);
			setState(84);
			match(TYPE_);
			setState(85);
			match(LBRACE);
			setState(86);
			attr_name();
			setState(87);
			type();
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(88);
				match(COMMA);
				setState(89);
				attr_name();
				setState(90);
				type();
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Exec_query_stmtContext extends ParserRuleContext {
		public TerminalNode EXEC_() { return getToken(ExecPlanParser.EXEC_, 0); }
		public TerminalNode QUERY_() { return getToken(ExecPlanParser.QUERY_, 0); }
		public Query_nameContext query_name() {
			return getRuleContext(Query_nameContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(ExecPlanParser.LBRACE, 0); }
		public List<Query_stmtContext> query_stmt() {
			return getRuleContexts(Query_stmtContext.class);
		}
		public Query_stmtContext query_stmt(int i) {
			return getRuleContext(Query_stmtContext.class,i);
		}
		public TerminalNode RBRACE() { return getToken(ExecPlanParser.RBRACE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(ExecPlanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExecPlanParser.COMMA, i);
		}
		public Exec_query_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exec_query_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterExec_query_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitExec_query_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitExec_query_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Exec_query_stmtContext exec_query_stmt() throws RecognitionException {
		Exec_query_stmtContext _localctx = new Exec_query_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_exec_query_stmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(EXEC_);
			setState(100);
			match(QUERY_);
			setState(101);
			query_name();
			setState(102);
			match(LBRACE);
			setState(103);
			query_stmt();
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(104);
				match(COMMA);
				setState(105);
				query_stmt();
				}
				}
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(111);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Query_stmtContext extends ParserRuleContext {
		public Query_tableContext query_table() {
			return getRuleContext(Query_tableContext.class,0);
		}
		public TerminalNode FILTER_() { return getToken(ExecPlanParser.FILTER_, 0); }
		public Ia_attrsContext ia_attrs() {
			return getRuleContext(Ia_attrsContext.class,0);
		}
		public Query_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterQuery_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitQuery_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitQuery_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_stmtContext query_stmt() throws RecognitionException {
		Query_stmtContext _localctx = new Query_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_query_stmt);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DATA_:
			case RANGE_:
			case EXEC_:
			case QUERY_:
			case UPDATE_:
			case INSERT_:
			case ID:
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				query_table();
				}
				break;
			case FILTER_:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(114);
				match(FILTER_);
				setState(115);
				ia_attrs();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Query_tableContext extends ParserRuleContext {
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Ea_attrsContext ea_attrs() {
			return getRuleContext(Ea_attrsContext.class,0);
		}
		public Ia_attrsContext ia_attrs() {
			return getRuleContext(Ia_attrsContext.class,0);
		}
		public Oa_attrsContext oa_attrs() {
			return getRuleContext(Oa_attrsContext.class,0);
		}
		public Pa_attrsContext pa_attrs() {
			return getRuleContext(Pa_attrsContext.class,0);
		}
		public List<Attr_nameContext> attr_name() {
			return getRuleContexts(Attr_nameContext.class);
		}
		public Attr_nameContext attr_name(int i) {
			return getRuleContext(Attr_nameContext.class,i);
		}
		public List<TerminalNode> COLON() { return getTokens(ExecPlanParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(ExecPlanParser.COLON, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExecPlanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExecPlanParser.COMMA, i);
		}
		public Query_tableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterQuery_table(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitQuery_table(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitQuery_table(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Query_tableContext query_table() throws RecognitionException {
		Query_tableContext _localctx = new Query_tableContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_query_table);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			table_name();
			setState(119);
			ea_attrs();
			setState(120);
			ia_attrs();
			setState(121);
			oa_attrs();
			setState(122);
			pa_attrs();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATA_) | (1L << RANGE_) | (1L << EXEC_) | (1L << QUERY_) | (1L << UPDATE_) | (1L << INSERT_) | (1L << ID) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(123);
				attr_name();
				setState(124);
				match(COLON);
				setState(125);
				attr_name();
				setState(133);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(126);
						match(COMMA);
						setState(127);
						attr_name();
						setState(128);
						match(COLON);
						setState(129);
						attr_name();
						}
						} 
					}
					setState(135);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Attr_listsContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(ExecPlanParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(ExecPlanParser.RBRACKET, 0); }
		public List<Attr_nameContext> attr_name() {
			return getRuleContexts(Attr_nameContext.class);
		}
		public Attr_nameContext attr_name(int i) {
			return getRuleContext(Attr_nameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExecPlanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExecPlanParser.COMMA, i);
		}
		public Attr_listsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attr_lists; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterAttr_lists(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitAttr_lists(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitAttr_lists(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Attr_listsContext attr_lists() throws RecognitionException {
		Attr_listsContext _localctx = new Attr_listsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_attr_lists);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(LBRACKET);
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATA_) | (1L << RANGE_) | (1L << EXEC_) | (1L << QUERY_) | (1L << UPDATE_) | (1L << INSERT_) | (1L << ID) | (1L << STRING_LITERAL))) != 0)) {
				{
				setState(139);
				attr_name();
				setState(144);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(140);
					match(COMMA);
					setState(141);
					attr_name();
					}
					}
					setState(146);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(149);
			match(RBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ea_attrsContext extends ParserRuleContext {
		public Attr_listsContext attr_lists() {
			return getRuleContext(Attr_listsContext.class,0);
		}
		public Ea_attrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ea_attrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterEa_attrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitEa_attrs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitEa_attrs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Ea_attrsContext ea_attrs() throws RecognitionException {
		Ea_attrsContext _localctx = new Ea_attrsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_ea_attrs);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(151);
			attr_lists();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Ia_attrsContext extends ParserRuleContext {
		public TerminalNode LBRACKET() { return getToken(ExecPlanParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(ExecPlanParser.RBRACKET, 0); }
		public List<Attr_nameContext> attr_name() {
			return getRuleContexts(Attr_nameContext.class);
		}
		public Attr_nameContext attr_name(int i) {
			return getRuleContext(Attr_nameContext.class,i);
		}
		public List<TerminalNode> OP() { return getTokens(ExecPlanParser.OP); }
		public TerminalNode OP(int i) {
			return getToken(ExecPlanParser.OP, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExecPlanParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExecPlanParser.COMMA, i);
		}
		public Ia_attrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ia_attrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).enterIa_attrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExecPlanParserListener ) ((ExecPlanParserListener)listener).exitIa_attrs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExecPlanParserVisitor ) return ((ExecPlanParserVisitor<? extends T>)visitor).visitIa_attrs(this);
			else return visitor.visitChildren(this);
		}
	}
